# AI_Agent_For_DevOps

./: .gitignore  README.md
devops_ai_project/: pyproject.toml  report.md
devops_ai_project/src/devops_ai_project/: crew.py  main.py
